--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -19,7 +19,8 @@
             </div>
 
             <div class="flex flex-col p-1 bg-slate-900 min-w-64 max-w-64">
-                <h3 class="text-white mb-2 text-center">Room: {{gameService.room.name}}</h3>
+                <h3 class="text-white mb-2 text-center">Room Name: {{gameService.room.name}}</h3>
+                <button (click)="copyUrl()" class="btn btn-sm btn-outline text-white drawer-button w-1/2">copy</button>
 
                 <app-messenger></app-messenger>
 
