--- a/src/app/components/messaging/messenger/messenger.component.html
+++ b/src/app/components/messaging/messenger/messenger.component.html
@@ -1,4 +1,4 @@
-<div class="m-2 bg-slate-600 rounded-box">
+<div class="bg-slate-600 rounded-box">
   <div #messageBox class="overflow-auto h-60   p-4">
     <div *ngFor="let message of messages" class="">
       <app-message [message]="message"></app-message>
