--- a/src/app/components/pages/game/game.component.html
+++ b/src/app/components/pages/game/game.component.html
@@ -5,38 +5,34 @@
 
         <div class="flex flex-row flex-grow">
 
-            <!-- <div class="flex flex-col p-4">
-                <h1>left column</h1>
-                <h4>Stuff</h4>
-                <h4>Room: {{room.name}}</h4>
-            </div> -->
-
-
             <div class="grid grid-cols-2 flex-grow">
                 <div *ngFor="let player of sortedPlayers" class="bg-slate-800" [ngClass]="sortedPlayers.length <= 2 ? 'full-height' : 'half-height'">
                     <app-user-stream [player]="player" [localStream]="player.id == localPlayerId"></app-user-stream>
                 </div>
             </div>
 
-            <div class="flex flex-col p-1 bg-slate-900 min-w-64 max-w-64">
-                <h3 class="text-white mb-2 text-center">Room Name: {{gameService.room.name}}</h3>
-                
-                <div class="justify-center mb-2 grid grid-cols-2 gap-y-2">
-                    <label *ngIf="localPlayer?.admin" for="my-drawer" class="btn btn-sm btn-outline text-white drawer-button w-full">Game</label>
-                    <button (click)="copyUrl()" class="btn btn-sm btn-outline text-white drawer-button w-full">Share Link</button>
-                    <button (click)="reportComponent.open()" class="btn btn-sm btn-outline text-white drawer-button w-full">Report Issue</button>
+            <div class="flex flex-col p-1 bg-slate-900 min-w-64 max-w-64 pl-2 pr-2">
+
+                <div class="">
+                    <h3 class="text-white">Room Name: <span class="text-pop">{{gameService.room.name}}</span></h3>
+                    <h3 class="text-white mb-2 ">Game Type: <span class="text-pop capitalize">{{gameService.room.game?.searchTag}}</span></h3>
+                    
+                    <div class="justify-center mb-2 grid grid-cols-2 gap-y-2">
+                        <label *ngIf="localPlayer?.admin" for="my-drawer" class="btn btn-sm btn-outline text-white drawer-button w-full">Game</label>
+                        <button (click)="copyUrl()" class="btn btn-sm btn-outline text-white drawer-button w-full">Share Link</button>
+                        <button (click)="reportComponent.open()" class="btn btn-sm btn-outline text-white drawer-button w-full">Report Issue</button>
+                    </div>
                 </div>
 
                 <app-messenger></app-messenger>
 
-                <div class="">
+                <div class="mt-2">
                     <app-card-list></app-card-list>
                 </div>
                 
             </div>
             
         </div>
-
         
     </div>
 
