--- a/src/app/components/modals/password-modal/password-modal.component.html
+++ b/src/app/components/modals/password-modal/password-modal.component.html
@@ -25,7 +25,7 @@
               class="w-full btn btn-outline text-white py-2 px-4 rounded"
               [disabled]="!passwordForm.valid "
             >
-              Submit Issue
+              Join Game
             </button>
         </form>
     </div>
