--- a/src/app/components/pages/index/index.component.html
+++ b/src/app/components/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <!-- Hero Section -->
 <div class="hero min-h-screen" style="background-image: url('table-stream.png');">
     <div class="hero-overlay bg-opacity-60 background"></div>
-    <div class="hero-content text-center text-neutral-content heroBackground">
+    <div class="hero-content text-center text-white heroBackground">
         <div class="max-w-650">
             <h1 class="mb-5 text-5xl font-bold">Table Stream</h1>
             <p class="mb-5 text-xl"><strong>Welcome to Table Stream!</strong> A platform that lets you connect, share your webcam, and enjoy games like Magic: The Gathering with friends online.</p>
