--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="max-w-64  ml-3">
-                        <app-card *ngIf="cardBeingHovered" [card]="cardBeingHovered" [showPopup]="false" (click)="shareCard(true)"></app-card>
+                        <app-card [card]="cardBeingHovered" [showPopup]="false" (click)="shareCard(true)"></app-card>
                     </div>
                 </div>
             </div>
