--- a/src/app/components/life-total/life-total.component.html
+++ b/src/app/components/life-total/life-total.component.html
@@ -26,6 +26,7 @@
                     <li (click)="toggleMonarch()"><a>Become Monarch</a></li>
                     <li (click)="showPoisonCounter = !showPoisonCounter;"><a>Show Poison</a></li>
                     <li (click)="showEnergyCounter = !showEnergyCounter;"><a>Show Energy</a></li>
+                    <li (click)="toggleCitiesBlessing()"><a>Toggle Cities Blessing</a></li>
                 </ul>
             </div>
     
