--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -73,6 +73,7 @@
         </div>
       
         <p class="text-white text-base mt-4"><strong>Note:</strong> Table Stream is currently in alpha. You may encounter bugs or missing features as we work hard to improve the platform. Your feedback and patience are greatly appreciated as we build this experience together!</p>
+        <p class="text-white text-base mt-4"><strong>Issues and Feedback:</strong> Email any problems or feedback to admin&#64;table-stream.com</p>
       </div>
 </div>
 
