remove prod check

--- a/src/app/components/pages/index/index.component.html
+++ b/src/app/components/pages/index/index.component.html
@@ -42,7 +42,7 @@
             <h2 class="text-3xl font-bold mb-4">No Account Needed</h2>
             <p class="mb-4">
                 Table Stream is completely free to use. No account or email registration is required. Just jump in and start
-                playing! prod check
+                playing!
             </p>
         </section>
     
