--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -42,7 +42,7 @@
                 <option *ngFor="let type of gameTypes()" [value]="type.value">{{ type.label }}</option>
               </select>
             </div>
-            <button type="submit" class="w-full btn btn-outline text-white py-2 px-4 rounded disabled:text-gray-500 disabled:border-slate-600 disabled:cursor-not-allowed" [disabled]="!createForm.valid">
+            <button type="submit" class="w-full btn btn-outline text-white py-2 px-4 rounded disabled:text-gray-500 disabled:border-slate-600 disabled:cursor-not-allowed" [disabled]="!createForm.valid || !isValidGameType()">
               Create Game
             </button>
           </form>
