--- a/src/app/components/pages/index/index.component.html
+++ b/src/app/components/pages/index/index.component.html
@@ -24,7 +24,7 @@
                 with real cards.
             </p>
             <p class="mb-4">
-                Our platform also supports other popular card games like <strong>Pokémon</strong> and
+                Our platform will soon support other popular card games like <strong>Pokémon</strong> and
                 <strong>Yu-Gi-Oh!</strong> Expand your gaming experience and connect with players worldwide.
             </p>
         </section>
@@ -32,9 +32,34 @@
         <section class="mb-12">
             <h2 class="text-3xl font-bold mb-4">Game Features</h2>
             <ul class="list-disc list-inside mb-4">
-                <li>Track life totals, commander damage, and turn timers</li>
+                <li>2-4 player games</li>
                 <li>Search and share cards in-game</li>
                 <li>Real-time audio and video streaming</li>
+                <li>Spectator support</li>
+                <li>Password protected games</li>
+                <li>Game state tracking such as:
+                    <ul class="list-disc list-inside ml-8">
+                        <li>Life totals</li>
+                        <li>Commander Damages</li>
+                        <li>Energy</li>
+                        <li>Poison</li>
+                        <li>Monarch</li>
+                        <li>Turn Timers</li>
+                        <li>Cities Blessing</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="mb-12">
+            <h2 class="text-3xl font-bold mb-4">Planned Features</h2>
+            <ul class="list-disc list-inside mb-4">
+                <li>Yu-Gi-Oh! support</li>
+                <li>Pokémon support</li>
+                <li>Public server list</li>
+                <li>Click to auto search for cards</li>
+                <li>Emoticons and sound boards</li>
+                <li>Much more!</li>
             </ul>
         </section>
     
